--- a/app/src/main/res/layout/activity_income_expenses.xml
+++ b/app/src/main/res/layout/activity_income_expenses.xml
@@ -9,7 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView android:text="Income and Expenses" android:textSize="20sp" />
+        <TextView
+            android:text="Income and Expenses"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <EditText
             android:id="@+id/etIncome"
