--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:padding="24dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/tvTitleMain"
-        android:text="EMI and Budget Planner"
-        android:textSize="22sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="24dp">
 
     <Button
         android:id="@+id/btnEmi"
-        android:text="EMI Calculator"
-        android:layout_marginTop="24dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="EMI Calculator" />
 
     <Button
-        android:id="@+id/btnIncomeExpense"
-        android:text="Income & Expenses"
-        android:layout_marginTop="12dp"
+        android:id="@+id/btnIncomeExpenses"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Income and Expenses"
+        android:layout_marginTop="16dp" />
 
     <Button
         android:id="@+id/btnBalance"
-        android:text="Budget Balance"
-        android:layout_marginTop="12dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Budget Balance"
+        android:layout_marginTop="16dp" />
 
 </LinearLayout>
